Fix layout bug

--- a/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
@@ -1129,6 +1129,7 @@ html.flexbox:not(.Explorer):not(.Safari) {
         max-width: @paragraph-max-width;
         margin-left: auto;
         margin-right: auto;
+        min-width: 0;//Prevent overflowing of container in case of long wikipedia links (flexbox behaviour)
     }
 }
 
